src/test/ui/issues/issue-25439.stderr
error[E0644]: closure/generator type that references itself
  --> $DIR/issue-25439.rs:8:9
   |
LL |     fix(|_, x| x);
   |         ^^^^^^^^ cyclic type of infinite size
   |
   = note: closures cannot capture themselves or take themselves as argument;
           this error may be the result of a recent compiler bug-fix,
           see https://github.com/rust-lang/rust/issues/46062 for more details

error: aborting due to previous error

For more information about this error, try `rustc --explain E0644`.
